[package]
name = "inochi2d-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = [
     "Aki Van Ness <aki@catgirl.link>"
]
repository = "https://github.com/Inochi2D/inochi2d-rs"
readme = "README.md"
license = "BSD-2-Clause"
keywords = [
	"Inochi2D",
	"gamedev",
	"vtuber",
	"streaming"
]
categories = [
    "external-ffi-bindings"
]
description = "Rust bindings for Inochi2D"


[features]
default = ["opengl", "logging", "monotonic"]
logging = ["tracing"]
monotonic = []
opengl = []
nightly = []

[dependencies]
libc = "0.2"
tracing = { version = "0.1.35", optional = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
glfw = "0.45.0"
gl = "0.14.0"
tracing-subscriber = "0.3.14"
